--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/springhumo?sslmode=allow
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=1
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.show-sql=true
+spring.jpa.show-sql=true
